[gd_scene load_steps=28 format=3 uid="uid://bik6wqe8d6blm"]

[ext_resource type="Script" path="res://Scripts/Levels/level_005.gd" id="1_0kr3x"]
[ext_resource type="PackedScene" uid="uid://by8p77gmthuie" path="res://Locks/joker_hole.tscn" id="1_1ev8j"]
[ext_resource type="PackedScene" uid="uid://dsdg7jp6jutb0" path="res://Assets/Door.tscn" id="1_tv0dt"]
[ext_resource type="PackedScene" uid="uid://sbwjcysciyu3" path="res://Assets/Pickable.tscn" id="2_3020y"]
[ext_resource type="Material" uid="uid://bjmh0hksgeqm5" path="res://Assets/Materials/GND.tres" id="2_exwsj"]
[ext_resource type="Material" uid="uid://citfwthsykrmg" path="res://Assets/Materials/Wall.tres" id="3_vlpih"]
[ext_resource type="Material" uid="uid://chq8qoxv2ae26" path="res://Assets/Materials/Pit.tres" id="5_2oom1"]
[ext_resource type="MeshLibrary" uid="uid://b2lpf7x02brbv" path="res://Utils/Grids.tres" id="7_nq4js"]
[ext_resource type="PackedScene" uid="uid://d1qtdsydcun5s" path="res://Assets/LightTile.tscn" id="9_bb2x8"]

[sub_resource type="PlaneMesh" id="PlaneMesh_gucnj"]
size = Vector2(8, 6.199)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_1pxjr"]
data = PackedVector3Array(4, 0, 3.0995, -4, 0, 3.0995, 4, 0, -3.0995, -4, 0, 3.0995, -4, 0, -3.0995, 4, 0, -3.0995)

[sub_resource type="BoxMesh" id="BoxMesh_2y3lq"]
size = Vector3(3, 1, 10.845)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_fcqs3"]
data = PackedVector3Array(-1.5, 0.5, 5.4225, 1.5, 0.5, 5.4225, -1.5, -0.5, 5.4225, 1.5, 0.5, 5.4225, 1.5, -0.5, 5.4225, -1.5, -0.5, 5.4225, 1.5, 0.5, -5.4225, -1.5, 0.5, -5.4225, 1.5, -0.5, -5.4225, -1.5, 0.5, -5.4225, -1.5, -0.5, -5.4225, 1.5, -0.5, -5.4225, 1.5, 0.5, 5.4225, 1.5, 0.5, -5.4225, 1.5, -0.5, 5.4225, 1.5, 0.5, -5.4225, 1.5, -0.5, -5.4225, 1.5, -0.5, 5.4225, -1.5, 0.5, -5.4225, -1.5, 0.5, 5.4225, -1.5, -0.5, -5.4225, -1.5, 0.5, 5.4225, -1.5, -0.5, 5.4225, -1.5, -0.5, -5.4225, 1.5, 0.5, 5.4225, -1.5, 0.5, 5.4225, 1.5, 0.5, -5.4225, -1.5, 0.5, 5.4225, -1.5, 0.5, -5.4225, 1.5, 0.5, -5.4225, -1.5, -0.5, 5.4225, 1.5, -0.5, 5.4225, -1.5, -0.5, -5.4225, 1.5, -0.5, 5.4225, 1.5, -0.5, -5.4225, -1.5, -0.5, -5.4225)

[sub_resource type="PlaneMesh" id="PlaneMesh_tfx0h"]
size = Vector2(3, 3)

[sub_resource type="BoxMesh" id="BoxMesh_2hg3k"]
size = Vector3(2.092, 0.442, 0.111)

[sub_resource type="PlaneMesh" id="PlaneMesh_5245y"]
flip_faces = true
size = Vector2(7.901, 17.047)

[sub_resource type="QuadMesh" id="QuadMesh_tdhyx"]
material = ExtResource("5_2oom1")
size = Vector2(11, 5)

[sub_resource type="QuadMesh" id="QuadMesh_c2tfm"]
material = ExtResource("5_2oom1")
flip_faces = true
size = Vector2(11, 5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ho2c8"]
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="PlaneMesh" id="PlaneMesh_q5qgp"]
material = SubResource("StandardMaterial3D_ho2c8")
size = Vector2(7.96, 13.07)

[sub_resource type="BoxMesh" id="BoxMesh_af0ef"]
material = ExtResource("3_vlpih")
size = Vector3(0.2, 3, 17)

[sub_resource type="Animation" id="Animation_0h1hd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Walls/Platform:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, -5.21613, 7.10579)]
}

[sub_resource type="Animation" id="Animation_rnsyw"]
resource_name = "platform"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Walls/Platform:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, -5.29967, 7.97169), Vector3(0, -0.55222, 7.97169)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ylhsf"]
_data = {
"RESET": SubResource("Animation_0h1hd"),
"platform": SubResource("Animation_rnsyw")
}

[sub_resource type="BoxShape3D" id="BoxShape3D_lpa3t"]
size = Vector3(8, 1, 17)

[sub_resource type="BoxShape3D" id="BoxShape3D_aktnr"]
size = Vector3(1.35533, 1.92846, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_edjej"]
size = Vector3(8.302, 1, 15)

[node name="Level005" type="Node3D"]
script = ExtResource("1_0kr3x")

[node name="Walls" type="Node3D" parent="."]

[node name="GND" type="MeshInstance3D" parent="Walls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.549944)
material_override = ExtResource("2_exwsj")
mesh = SubResource("PlaneMesh_gucnj")

[node name="StaticBody3D" type="StaticBody3D" parent="Walls/GND"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Walls/GND/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_1pxjr")

[node name="Platform" type="MeshInstance3D" parent="Walls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -5.21613, 7.10579)
material_override = ExtResource("2_exwsj")
mesh = SubResource("BoxMesh_2y3lq")

[node name="StaticBody3D" type="StaticBody3D" parent="Walls/Platform"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Walls/Platform/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_fcqs3")

[node name="LowerGND" type="MeshInstance3D" parent="Walls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.07093, -2.32146, 4.21457)
mesh = SubResource("PlaneMesh_tfx0h")

[node name="JokerGround" parent="Walls/LowerGND" instance=ExtResource("1_1ev8j")]
transform = Transform3D(3, 0, 0, 0, 3, 0, 0, 0, 3, 0, 0, 0)

[node name="FitIn" type="MeshInstance3D" parent="Walls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00986518, 2.77171, -3.50369)
material_override = ExtResource("3_vlpih")
mesh = SubResource("BoxMesh_2hg3k")

[node name="FitOut" type="MeshInstance3D" parent="Walls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0572666, 2.77096, 13.5041)
material_override = ExtResource("3_vlpih")
mesh = SubResource("BoxMesh_2hg3k")

[node name="Floor" type="MeshInstance3D" parent="Walls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.99757, 5.0386)
mesh = SubResource("PlaneMesh_5245y")

[node name="Floor2" type="MeshInstance3D" parent="Walls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.95976, 5.0386)
mesh = SubResource("PlaneMesh_5245y")

[node name="WallPit" type="MeshInstance3D" parent="Walls"]
transform = Transform3D(-4.37114e-08, 3.48787e-16, 1, 3.48787e-16, 1, -3.48787e-16, -1, 3.48787e-16, -4.37114e-08, -3.97358, -2.54479, 7.97102)
mesh = SubResource("QuadMesh_tdhyx")

[node name="WallPit2" type="MeshInstance3D" parent="Walls"]
transform = Transform3D(-4.37114e-08, -3.48787e-16, -1, 3.48787e-16, 1, -3.48787e-16, 1, -3.48787e-16, -4.37114e-08, 4.01984, -2.54479, 7.97102)
mesh = SubResource("QuadMesh_tdhyx")

[node name="WallPit3" type="MeshInstance3D" parent="Walls"]
transform = Transform3D(1, -3.48787e-16, 3.48787e-16, 3.48787e-16, 1, -3.48787e-16, -3.48787e-16, 3.48787e-16, 1, 0.86129, -2.54479, 13.4686)
mesh = SubResource("QuadMesh_c2tfm")

[node name="pit" type="MeshInstance3D" parent="Walls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -4.19608, 8.03099)
mesh = SubResource("PlaneMesh_q5qgp")

[node name="LeftWall" type="MeshInstance3D" parent="Walls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.00255, 1.45711, 4.97772)
mesh = SubResource("BoxMesh_af0ef")

[node name="RightWall" type="MeshInstance3D" parent="Walls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.08171, 1.45711, 4.97772)
mesh = SubResource("BoxMesh_af0ef")

[node name="Objects" type="Node3D" parent="."]

[node name="DoorIn" parent="Objects" instance=ExtResource("1_tv0dt")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.022222, 1.23079, -3.56334)

[node name="DoorOut" parent="Objects" instance=ExtResource("1_tv0dt")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00377426, 1.23079, 13.4277)

[node name="Pickable" parent="Objects" instance=ExtResource("2_3020y")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.57027, 0.804684, 0)

[node name="Animations" type="Node3D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Animations"]
libraries = {
"": SubResource("AnimationLibrary_ylhsf")
}

[node name="Areas" type="Node3D" parent="."]

[node name="ResetArea" type="Node3D" parent="Areas"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.142, 1.28305, 0)

[node name="FallArea" type="Area3D" parent="Areas"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Areas/FallArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -3.50272, 5.7443)
shape = SubResource("BoxShape3D_lpa3t")

[node name="PlayerOpenDoor" type="Area3D" parent="Areas"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.184278, 0, -0.885519)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Areas/PlayerOpenDoor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.343893, 1.17701, -2.79544)
shape = SubResource("BoxShape3D_aktnr")

[node name="PlayerInRoom" type="Area3D" parent="Areas"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Areas/PlayerInRoom"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 4.60909)
shape = SubResource("BoxShape3D_edjej")

[node name="Grids" type="Node3D" parent="."]

[node name="GridMapRightLeft" type="GridMap" parent="Grids"]
mesh_library = ExtResource("7_nq4js")
cell_size = Vector3(1, 1, 1)
data = {
"cells": PackedInt32Array(65532, 65532, 1, 65533, 65532, 1, 65534, 65532, 1, 1, 65532, 1, 2, 65532, 1, 3, 65532, 1, 3, 13, 1, 2, 13, 1, 1, 13, 1, 65534, 13, 1, 65533, 13, 1, 65532, 13, 1, 65539, 13, 1, 65538, 13, 1, 65537, 13, 1, 131070, 13, 1, 131069, 13, 1, 131068, 13, 1, 131070, 65532, 1, 131069, 65532, 1, 131068, 65532, 1, 65537, 65532, 1, 65538, 65532, 1, 65539, 65532, 1, 131075, 65532, 1, 131074, 65532, 1, 131073, 65532, 1, 196605, 65532, 1, 196606, 65532, 1, 196604, 65532, 1, 131075, 13, 1, 131074, 13, 1, 131073, 13, 1, 196606, 13, 1, 196605, 13, 1, 196604, 13, 1)
}
metadata/_editor_floor_ = Vector3(0, 2, 0)

[node name="Lights" type="Node3D" parent="."]

[node name="OmniLight3D" type="OmniLight3D" parent="Lights"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.56633, -1.57528)
light_energy = 0.0
omni_range = 7.0

[node name="OmniLight3D2" type="OmniLight3D" parent="Lights"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.56633, 1.17397)
light_energy = 0.0
omni_range = 7.0

[node name="OmniLight3D3" type="OmniLight3D" parent="Lights"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.56633, 4.39748)
light_energy = 0.0
omni_range = 7.0

[node name="OmniLight3D4" type="OmniLight3D" parent="Lights"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.56633, 8.96749)
light_energy = 0.0
omni_range = 7.0

[node name="Fixture" type="Node3D" parent="."]

[node name="LightTile" parent="Fixture" instance=ExtResource("9_bb2x8")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 2.89488, -2.85404)

[node name="LightTile2" parent="Fixture" instance=ExtResource("9_bb2x8")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 2.89488, -1.57339)

[node name="LightTile3" parent="Fixture" instance=ExtResource("9_bb2x8")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 2.89488, -0.291724)

[node name="LightTile4" parent="Fixture" instance=ExtResource("9_bb2x8")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 2.89488, 0.938993)

[node name="LightTile5" parent="Fixture" instance=ExtResource("9_bb2x8")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 2.89488, 2.13926)

[node name="LightTile6" parent="Fixture" instance=ExtResource("9_bb2x8")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 2.89488, 3.42361)

[node name="LightTile7" parent="Fixture" instance=ExtResource("9_bb2x8")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 2.89488, 4.69867)

[node name="LightTile8" parent="Fixture" instance=ExtResource("9_bb2x8")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 2.89488, 6.00979)

[node name="LightTile9" parent="Fixture" instance=ExtResource("9_bb2x8")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 2.89488, 7.30517)

[node name="LightTile10" parent="Fixture" instance=ExtResource("9_bb2x8")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 2.89488, 8.54875)

[node name="LightTile11" parent="Fixture" instance=ExtResource("9_bb2x8")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 2.89488, 9.82735)

[node name="LightTile12" parent="Fixture" instance=ExtResource("9_bb2x8")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 2.89488, 11.1124)

[node name="LightTile13" parent="Fixture" instance=ExtResource("9_bb2x8")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 2.89488, 12.4121)

[node name="LightTile14" parent="Fixture" instance=ExtResource("9_bb2x8")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 2.89488, 12.9849)

[connection signal="pickable_in" from="Walls/LowerGND/JokerGround" to="." method="_on_joker_ground_pickable_in"]
[connection signal="animation_finished" from="Animations/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="body_entered" from="Areas/FallArea" to="." method="_on_fall_area_body_entered"]
[connection signal="body_entered" from="Areas/PlayerOpenDoor" to="." method="_on_player_open_door_body_entered"]
[connection signal="body_exited" from="Areas/PlayerOpenDoor" to="." method="_on_player_open_door_body_exited"]
[connection signal="body_entered" from="Areas/PlayerInRoom" to="." method="_on_player_in_room_body_entered"]
[connection signal="body_exited" from="Areas/PlayerInRoom" to="." method="_on_player_in_room_body_exited"]
